Update imports and API for package reorganization
Refactored imports and API references throughout documentation, examples, and source files to match the new domain-centric package structure. Renamed functions for clarity (e.g., convolve → graph_convolve, spikes_to_field → spikes_to_rate_map, field_centroid → rate_map_centroid, map_estimate → posterior_mode, entropy → posterior_entropy). Added VTE module to behavior and updated related documentation. Deleted obsolete PLAN.md after migration.

--- a/docs/examples/06_composite_environments.ipynb
+++ b/docs/examples/06_composite_environments.ipynb
@@ -1233,7 +1233,7 @@
    "outputs": [],
    "source": [
     "# Import pairwise for edge iteration (more efficient than zip)\n",
-    "from itertools import pairwise  # noqa: E402\n",
+    "from itertools import pairwise\n",
     "\n",
     "# Find path from start to right arm (crosses bridges through junction)\n",
     "source_bin = 0  # First bin in start box\n",
@@ -1295,7 +1295,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import warnings  # noqa: E402\n",
+    "import warnings\n",
     "\n",
     "# Create a composite without bridges to demonstrate warning\n",
     "disconnected_composite = CompositeEnvironment(\n",
@@ -1330,8 +1330,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tempfile  # noqa: E402\n",
-    "from pathlib import Path  # noqa: E402\n",
+    "import tempfile\n",
+    "from pathlib import Path\n",
     "\n",
     "# Save composite environment to file\n",
     "with tempfile.TemporaryDirectory() as tmpdir:\n",
