--- a/docs/examples/10_signal_processing_primitives.ipynb
+++ b/docs/examples/10_signal_processing_primitives.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Signal Processing Primitives\n",
     "\n",
-    "This notebook demonstrates the spatial signal processing primitives `neighbor_reduce()` and `convolve()` for custom filtering and local aggregation on graph-based environments.\n",
+    "This notebook demonstrates the spatial signal processing primitives `neighbor_reduce()` and `graph_convolve()` for custom filtering and local aggregation on graph-based environments.\n",
     "\n",
     "**Estimated time**: 15-20 minutes\n",
     "\n",
@@ -17,7 +17,7 @@
     "\n",
     "- Use `neighbor_reduce()` to perform local aggregation on spatial graphs\n",
     "- Analyze spatial coherence using neighborhood statistics\n",
-    "- Apply custom convolution filters with `convolve()` for spatial analysis\n",
+    "- Apply custom convolution filters with `graph_convolve()` for spatial analysis\n",
     "- Implement box filters for occupancy-based thresholding\n",
     "- Create Mexican hat filters for edge detection in spatial fields\n",
     "- Assess local field variability for quality control\n",
@@ -25,7 +25,7 @@
     "**Topics covered**:\n",
     "- Local aggregation with `neighbor_reduce()`\n",
     "- Spatial coherence analysis\n",
-    "- Custom convolution with `convolve()`\n",
+    "- Custom convolution with `graph_convolve()`\n",
     "- Box filter for occupancy thresholding\n",
     "- Mexican hat edge detection\n",
     "- Local field variability"
@@ -50,7 +50,7 @@
     "\n",
     "from neurospatial import Environment\n",
     "from neurospatial.encoding.place import compute_place_field\n",
-    "from neurospatial.ops.graph import convolve, neighbor_reduce\n",
+    "from neurospatial.ops.graph import graph_convolve, neighbor_reduce\n",
     "\n",
     "# Random seed for reproducibility\n",
     "rng = np.random.default_rng(42)\n",
@@ -410,7 +410,7 @@
    "id": "71eca77e",
    "metadata": {},
    "source": [
-    "## Part 3: Box Filter with `convolve()`\n",
+    "## Part 3: Box Filter with `graph_convolve()`\n",
     "\n",
     "Use a box kernel (uniform weights within radius) to smooth binary occupancy. This reduces noise from single-visit bins."
    ]
@@ -442,7 +442,7 @@
     "\n",
     "\n",
     "# Apply box filter\n",
-    "smoothed_occupancy = convolve(env, binary_occupancy, box_kernel, normalize=True)\n",
+    "smoothed_occupancy = graph_convolve(env, binary_occupancy, box_kernel, normalize=True)\n",
     "\n",
     "# Threshold: keep bins with >50% neighbors visited\n",
     "reliable_visited = smoothed_occupancy > 0.5\n",
@@ -528,7 +528,7 @@
    "id": "2bf87610",
    "metadata": {},
    "source": [
-    "## Part 4: Mexican Hat Edge Detection with `convolve()`\n",
+    "## Part 4: Mexican Hat Edge Detection with `graph_convolve()`\n",
     "\n",
     "The Mexican hat kernel (difference of Gaussians) detects edges by emphasizing local maxima and suppressing surroundings."
    ]
@@ -579,7 +579,7 @@
     "\n",
     "\n",
     "# Apply Mexican hat (DON'T normalize - breaks edge detection)\n",
-    "edges = convolve(env, firing_rate_smooth, mexican_hat, normalize=False)\n",
+    "edges = graph_convolve(env, firing_rate_smooth, mexican_hat, normalize=False)\n",
     "\n",
     "# Detect place field centers (strong positive responses)\n",
     "threshold_high = np.nanpercentile(edges, 95)\n",
@@ -670,7 +670,7 @@
    "id": "1d008706",
    "metadata": {},
    "source": [
-    "## Part 5: Comparison - `convolve()` vs `env.smooth()`\n",
+    "## Part 5: Comparison - `graph_convolve()` vs `env.smooth()`\n",
     "\n",
     "Compare custom Gaussian convolution with the built-in `env.smooth()` method."
    ]
@@ -711,7 +711,7 @@
     "    return np.exp(-(distances**2) / (2 * bandwidth**2))\n",
     "\n",
     "\n",
-    "result_convolve = convolve(env, random_field, gaussian_kernel, normalize=True)\n",
+    "result_convolve = graph_convolve(env, random_field, gaussian_kernel, normalize=True)\n",
     "\n",
     "# Method 2: Built-in smoothing\n",
     "result_smooth = env.smooth(random_field, bandwidth, mode=\"density\")\n",
@@ -767,7 +767,7 @@
     "    ax=axes[1],\n",
     "    cmap=\"viridis\",\n",
     ")\n",
-    "axes[1].set_title(\"convolve() Result\", fontsize=14, weight=\"bold\")\n",
+    "axes[1].set_title(\"graph_convolve() Result\", fontsize=14, weight=\"bold\")\n",
     "\n",
     "# Built-in smoothing\n",
     "env.plot_field(\n",
@@ -785,7 +785,7 @@
    "id": "182f9028",
    "metadata": {},
    "source": [
-    "**Conclusion**: For standard Gaussian smoothing, use `env.smooth()` (faster, optimized). For custom kernels (box, Mexican hat, directional), use `convolve()`."
+    "**Conclusion**: For standard Gaussian smoothing, use `env.smooth()` (faster, optimized). For custom kernels (box, Mexican hat, directional), use `graph_convolve()`."
    ]
   },
   {
@@ -803,7 +803,7 @@
     "- Local field variability measurement\n",
     "- Simple, fast operations on graph neighborhoods\n",
     "\n",
-    "**`convolve()`**:\n",
+    "**`graph_convolve()`**:\n",
     "- Custom kernel convolution (box, Mexican hat, etc.)\n",
     "- Edge detection with difference of Gaussians\n",
     "- Occupancy thresholding with box filter\n",
@@ -812,7 +812,7 @@
     "**When to use which**:\n",
     "- `env.smooth()` → Standard Gaussian smoothing (fast, optimized)\n",
     "- `neighbor_reduce()` → Simple aggregation and local statistics\n",
-    "- `convolve()` → Custom kernels and advanced filtering\n",
+    "- `graph_convolve()` → Custom kernels and advanced filtering\n",
     "\n",
     "**Key applications**:\n",
     "- Quality metrics (spatial coherence, local variability)\n",
