--- a/docs/examples/11_place_field_analysis.ipynb
+++ b/docs/examples/11_place_field_analysis.ipynb
@@ -51,10 +51,10 @@
     "from neurospatial.encoding.place import (\n",
     "    compute_place_field,\n",
     "    detect_place_fields,\n",
-    "    field_centroid,\n",
     "    field_shift_distance,\n",
     "    field_size,\n",
     "    field_stability,\n",
+    "    rate_map_centroid,\n",
     "    skaggs_information,\n",
     "    sparsity,\n",
     ")\n",
@@ -502,7 +502,7 @@
     "    area = field_size(field_bins, env)\n",
     "\n",
     "    # Field centroid (center of mass)\n",
-    "    centroid = field_centroid(firing_rate, field_bins, env)\n",
+    "    centroid = rate_map_centroid(firing_rate, field_bins, env)\n",
     "\n",
     "    # Distance from true center\n",
     "    distance_from_true = np.linalg.norm(centroid - field_center)\n",
@@ -787,7 +787,7 @@
     "        field_properties.append(\n",
     "            {\n",
     "                \"area\": field_size(field_bins, env),\n",
-    "                \"centroid\": field_centroid(firing_rate, field_bins, env),\n",
+    "                \"centroid\": rate_map_centroid(firing_rate, field_bins, env),\n",
     "                \"peak_rate\": np.max(firing_rate[field_bins]),\n",
     "                \"mean_rate\": np.mean(firing_rate[field_bins]),\n",
     "            }\n",
@@ -1548,8 +1548,8 @@
     "\n",
     "# Compute centroids\n",
     "if len(fields_session1) > 0 and len(fields_session2) > 0:\n",
-    "    centroid_s1 = field_centroid(rate_session1, fields_session1[0], track_env)\n",
-    "    centroid_s2 = field_centroid(rate_session2, fields_session2[0], track_env)\n",
+    "    centroid_s1 = rate_map_centroid(rate_session1, fields_session1[0], track_env)\n",
+    "    centroid_s2 = rate_map_centroid(rate_session2, fields_session2[0], track_env)\n",
     "\n",
     "    print(\"\\nDetected centroids:\")\n",
     "    print(f\"  Session 1: ({centroid_s1[0]:.1f}, {centroid_s1[1]:.1f}) cm\")\n",
@@ -2057,7 +2057,7 @@
     "\n",
     "**Key Functions**:\n",
     "- `field_shift_distance()` - Measures centroid displacement between sessions\n",
-    "- `field_centroid()` - Computes rate-weighted center of mass\n",
+    "- `rate_map_centroid()` - Computes rate-weighted center of mass\n",
     "- `detect_place_fields()` - Finds place field bins"
    ]
   },
@@ -2085,7 +2085,7 @@
     "- `compute_place_field()` - Spike train → firing rate map\n",
     "- `detect_place_fields()` - Automatic field detection\n",
     "- `field_size()` - Field area in physical units\n",
-    "- `field_centroid()` - Center of mass\n",
+    "- `rate_map_centroid()` - Center of mass\n",
     "- `skaggs_information()` - Spatial information (bits/spike)\n",
     "- `sparsity()` - Firing sparsity [0, 1]\n",
     "- `field_stability()` - Temporal stability (correlation)\n",
