--- a/docs/examples/19_real_data_bandit_task.ipynb
+++ b/docs/examples/19_real_data_bandit_task.ipynb
@@ -49,8 +49,8 @@
     "from neurospatial.encoding.place import (\n",
     "    compute_place_field,\n",
     "    detect_place_fields,\n",
-    "    field_centroid,\n",
     "    field_size,\n",
+    "    rate_map_centroid,\n",
     "    skaggs_information,\n",
     "    sparsity,\n",
     ")\n",
@@ -1078,7 +1078,7 @@
     "        )\n",
     "\n",
     "        # Mark centroid using graph-based method (respects maze geometry)\n",
-    "        centroid = field_centroid(field, field_bins, env_2d, method=\"graph\")\n",
+    "        centroid = rate_map_centroid(field, field_bins, env_2d, method=\"graph\")\n",
     "        ax.scatter(\n",
     "            centroid[0],\n",
     "            centroid[1],\n",
@@ -1502,7 +1502,7 @@
     "- `skaggs_information()` - Measure spatial information (bits/spike)\n",
     "- `sparsity()` - Measure firing field compactness\n",
     "- `detect_place_fields()` - Automatic place field detection\n",
-    "- `field_size()`, `field_centroid()` - Place field properties\n",
+    "- `field_size()`, `rate_map_centroid()` - Place field properties\n",
     "\n",
     "### Next Steps\n",
     "\n",
