--- a/docs/examples/20_bayesian_decoding.ipynb
+++ b/docs/examples/20_bayesian_decoding.ipynb
@@ -427,7 +427,7 @@
     "# Access result properties\n",
     "print(\"DecodingResult Properties:\")\n",
     "print(f\"  posterior shape: {result.posterior.shape}\")\n",
-    "print(f\"  map_estimate shape: {result.map_estimate.shape} (bin indices)\")\n",
+    "print(f\"  posterior_mode shape: {result.posterior_mode.shape} (bin indices)\")\n",
     "print(f\"  map_position shape: {result.map_position.shape} (coordinates)\")\n",
     "print(f\"  mean_position shape: {result.mean_position.shape} (coordinates)\")\n",
     "print(f\"  uncertainty shape: {result.uncertainty.shape} (entropy in bits)\")\n",
