--- a/docs/examples/08_spike_field_basics.ipynb
+++ b/docs/examples/08_spike_field_basics.ipynb
@@ -12,7 +12,7 @@
     "By the end of this notebook, you will be able to:\n",
     "\n",
     "- Convert spike trains to occupancy-normalized firing rate fields\n",
-    "- Use `spikes_to_field()` and `compute_place_field()` functions\n",
+    "- Use `spikes_to_rate_map()` and `compute_place_field()` functions\n",
     "- Understand min occupancy thresholds and their impact\n",
     "- Generate reward fields for reinforcement learning\n",
     "- Compare different reward decay profiles\n",
@@ -51,7 +51,7 @@
     "\n",
     "from neurospatial import Environment\n",
     "from neurospatial.behavior.reward import goal_reward_field, region_reward_field\n",
-    "from neurospatial.encoding.place import compute_place_field, spikes_to_field\n",
+    "from neurospatial.encoding.place import compute_place_field, spikes_to_rate_map\n",
     "from neurospatial.simulation import (\n",
     "    PlaceCellModel,\n",
     "    generate_poisson_spikes,\n",
@@ -564,9 +564,9 @@
     "\n",
     "The sections below show the **low-level details** of how place fields are computed. Most users can skip this - `compute_place_field()` handles everything automatically.\n",
     "\n",
-    "### Manual Approach with `spikes_to_field()`\n",
+    "### Manual Approach with `spikes_to_rate_map()`\n",
     "\n",
-    "For fine-grained control, you can manually compute firing rates using `spikes_to_field()`:"
+    "For fine-grained control, you can manually compute firing rates using `spikes_to_rate_map()`:"
    ]
   },
   {
@@ -588,7 +588,7 @@
    ],
    "source": [
     "# Manual approach: compute firing rate field without smoothing\n",
-    "firing_rate_raw = spikes_to_field(\n",
+    "firing_rate_raw = spikes_to_rate_map(\n",
     "    env,\n",
     "    spike_times,\n",
     "    times,\n",
@@ -596,7 +596,7 @@
     "    min_occupancy_seconds=0.0,  # Include all bins\n",
     ")\n",
     "\n",
-    "firing_rate_filtered = spikes_to_field(\n",
+    "firing_rate_filtered = spikes_to_rate_map(\n",
     "    env,\n",
     "    spike_times,\n",
     "    times,\n",
@@ -1367,7 +1367,7 @@
     "In this notebook, you learned:\n",
     "\n",
     "### Spike Field Conversion\n",
-    "- ✅ Convert spike trains to firing rate fields using `spikes_to_field()`\n",
+    "- ✅ Convert spike trains to firing rate fields using `spikes_to_rate_map()`\n",
     "- ✅ Apply occupancy thresholds (`min_occupancy_seconds=0.5` is standard)\n",
     "- ✅ Use `compute_place_field()` for one-liner workflows with smoothing\n",
     "- ✅ Visualize occupancy, raw, and filtered firing rates\n",
