--- a/docs/examples/18_video_overlay.ipynb
+++ b/docs/examples/18_video_overlay.ipynb
@@ -251,7 +251,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from neurospatial.animation._video_io import VideoReader  # noqa: E402\n",
+    "from neurospatial.animation._video_io import VideoReader\n",
     "\n",
     "print(\"Example 1: Inspecting Video Metadata\")\n",
     "print(\"=\" * 50)\n",
@@ -786,7 +786,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from neurospatial.animation import subsample_frames  # noqa: E402\n",
+    "from neurospatial.animation import subsample_frames\n",
     "\n",
     "print(\"Example 7: Performance Optimization\")\n",
     "print(\"=\" * 50)\n",
